--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -850,9 +850,9 @@ li {
 }
 .slider-area .single-slider .hero-img {
   position: absolute;
-  right: 0;
+  right: -100px;
   top: 0;
-  width: 60%;
+  width: 70%;
   z-index: -1;
 }
 @media only screen and (min-width: 1200px) and (max-width: 1600px) {
